--- a/wp-content/themes/toppeq/scss/theme/_footer.scss
+++ b/wp-content/themes/toppeq/scss/theme/_footer.scss
@@ -11,6 +11,12 @@ footer{
 			padding: 0.5rem 0;
 			li{
 				list-style-type: none;
+				a{
+					color: black;
+					&:hover{
+						text-decoration: none;
+					}
+				}
 				@media(max-width: 525px){
 					padding: 0.5rem 0 !important;
 				}
@@ -28,6 +34,9 @@ footer{
 	.social-media{
 		display: flex;
 		justify-content: center;
+		a{
+			color: black;
+		}
 		@media (min-width: 768px){
 			justify-content: flex-end;
 		}
