--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -205,6 +205,76 @@ hr.line-separator{
         width: 60%;
     }
 }
+@keyframes fadeInTop {
+    from {
+        opacity:0;
+        -webkit-transform: translatey(0px);
+        transform: translatey(0px);
+    }
+    to {
+        opacity:1;
+        -webkit-transform: translatey(-20px);
+        transform: translatey(-20px);
+    }
+}
+@keyframes fadeInRight {
+    from {
+        opacity:0;
+        -webkit-transform: translatex(0px);
+        transform: translatex(0px);
+    }
+    to {
+        opacity:1;
+        -webkit-transform: translatex(-20px);
+        transform: translatex(-20px);
+    }
+}
+@keyframes fadeInLeft {
+    from {
+        opacity:0;
+        -webkit-transform: translatex(-30px);
+        transform: translatex(-30px);
+    }
+    to {
+        opacity:1;
+        -webkit-transform: translatex(0);
+        transform: translatex(0);
+    }
+}
+.hidden , .hidden_block {
+  opacity: 0;
+}
+
+.in-left {
+    -webkit-animation-name: fadeInLeft;
+    animation-name: fadeInLeft;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+.in-right {
+    -webkit-animation-name: fadeInRight;
+    animation-name: fadeInRight;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+.in-top {
+    -webkit-animation-name: fadeInTop;
+    animation-name: fadeInTop;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
 .why-toppeq{
     background: url('../images/why-toppeq.png') no-repeat;
     background-position-x: right;
@@ -275,9 +345,104 @@ hr.line-separator{
             padding: 10px 20px;
             margin: 15px 0;
             min-width: 200px;
+            transition: all 0.3s ease-in;
+            &:hover{
+                border: 1px solid $orange-3 ;
+                background-color: transparent;
+                color: $orange-3;
+            }
         }
     }
     @media (max-width: 767px){
         padding: 30px;
+    }
+}
+
+.homeSlider{   
+    position: relative;
+    margin-bottom: 100px;
+    .block{
+        position: absolute;
+        top: 40%;  
+        left: 0;
+        .btn{
+          border-radius: 0px 30px 30px 0px;
+          .circle{
+            border: 1px solid $dark;
+            border-radius: 30px;
+            padding: 4px 7px 0px;
+          } 
+        }
+        @media (max-width: 767px){
+          position: unset;
+        }      
+    }
+
+    .slick{
+        position: relative;
+            &-dots{
+                bottom: -45px;
+                right: 25%;
+                text-align: right;
+            li{
+                margin: 0 0.5rem;
+            }
+            button{
+                border: 2px solid black;
+                border: none;
+                background-color: $gray-600;
+                text-indent: -9999px;
+            }
+            @media (max-width: 991px){
+                text-align: center;
+            }
+        }
+        &-active{
+            button{
+                background-color: black;
+            }
+        }
+        &-arrow{
+            position: absolute;
+            bottom: -50px;
+            background: transparent;
+            border: 1px solid black;
+            border-radius: 30px;
+            padding: 9px 18px;
+            z-index: 1;
+            &:focus{
+                outline: 0;
+            }
+        }
+        &-next{
+            right: 4%;
+            @media(max-width: 991px){
+                right: 20%;
+            }
+        }
+        &-prev{
+            right: 10%;
+            @media(max-width: 991px){
+                right: 40%;
+            }
+        }
+        &-slide{
+            align-items: normal !important;
+            justify-content: flex-start;
+            height: auto !important;
+            img{
+                float: right;
+                @media (max-width: 991px){
+                    float: none;
+                    margin: auto;
+                    height: 600px;
+                }
+                &:after{
+                    content: '';
+                    display: block;
+                    clear: both;
+                }
+            }
+        }
     }
 }
