--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -18,7 +18,15 @@
       @media (min-width: 1201px) and (max-width: 1350px) {
         max-height: 300px;
       }
-      
+      @media (min-width: 992px) and (max-width: 1199px) {
+        max-width: 80vw;
+      }
+      @media only screen 
+      and (min-device-width : 320px) 
+      and (max-device-width : 991px) 
+      and (orientation : landscape) { 
+        max-width: 60vw;
+      }
     }
     &-text{
       max-width: 617px;
@@ -35,6 +43,10 @@
           font-size: 45px;
         }
         @media (min-width: 1201px) and (max-width: 1350px) {
+          font-size: 35px;
+          margin-bottom: 35px;
+        }
+        @media (min-width: 992px) and (max-width: 1199px) {
           font-size: 35px;
           margin-bottom: 35px;
         }
@@ -167,6 +179,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    overflow: hidden;
   }
 }
 
@@ -309,6 +322,31 @@
       height: auto !important;
       margin-right: 15px;
       margin-left: 15px;
+    }
+  }
+}
+
+.mainSlider { 
+  .item {
+    display: none;
+    height: 100vh;
+    &:first-child{
+      display: block;
+    }
+  }
+  picture, .item-text, .item-count{
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease;
+    -webkit-transition: opacity 1s ease;
+  }
+  &.slick-initialized{
+    .item{
+      display: block;
+    }
+    picture, .item-text, .item-count{
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
