--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -214,6 +214,7 @@ header{
     top: 73px;
     right: 90px;
     padding: 0;
+    margin-right: -9px;
     @media (max-width: 768px) {
         top: 55px;
         right: 25px;
