--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -581,7 +581,8 @@ hr.line-separator{
             }
         }
         .img-block {
-            width: 300px;
+            flex-basis: 200px;
+            margin-left: 24px;
             a{
                 img{
                     width: 100%;
