--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -539,19 +539,18 @@ hr.line-separator{
     }
 }
 
-.in-news-section{
+.in-news{
     position: relative;
-    .c_l{
-        img{
-            width: 100%;
-            height: auto;
-            max-width: 100%;
-            display: block;
-            vertical-align: middle;
-        }
+    z-index: 1;
+    img{
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+        display: block;
+        vertical-align: middle;
     }
     &:after{
-        content:'';
+        content: " ";
         display: block;
         position: absolute;
         height: 100%;
@@ -559,7 +558,8 @@ hr.line-separator{
         left: 0;
         right: 0;
         z-index: -1;
-        opacity: 0.32
+        opacity: 0.5;
+        background: black;
     }
 }
 
