--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -561,6 +561,22 @@ hr.line-separator{
         opacity: 0.5;
         background: black;
     }
+    .action{
+        a{
+            font-weight: 700;
+            display: inline-block;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+            &:hover{
+                text-decoration: none;
+            }
+            &:after{
+                content: "\f178";
+                font-family: fontAwesome;
+                padding-left: 12px;
+            }
+        }
+    }
 }
 
 .press {
@@ -588,6 +604,9 @@ hr.line-separator{
                     width: 100%;
                     height: auto;
                     object-fit: cover;
+                    @media (max-width: 767px){
+                        width: 250px;
+                    }
                 }
             }
         }
