--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -13,7 +13,20 @@ hr.line-separator{
     margin-bottom: 36px;
 }
 
-
+.title{
+    h1{
+        padding: 20px;
+        text-align: center;
+        font-size: 34px;
+        font-weight: 700;
+    }
+}
+.content{
+    p{
+        line-height: 2;
+        font-size: 14px;
+    }
+}
 .analysis-title{
     h1{
         @media (max-width: 1024px) {
