--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -574,7 +574,7 @@ hr.line-separator{
         right: 0;
         z-index: -1;
         opacity: 0.5;
-        background: black;
+        background: #959595;
     }
     .action{
         a{
