--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -649,3 +649,99 @@ hr.line-separator{
         }
     }
 }
+
+.contact-us{
+    .nav-tabs{
+        border-bottom: 0;
+        li{
+            margin: 1rem;
+            a{
+                border: solid 6px #7b7b7b;
+                border-radius: 100%;
+                padding: 40px 20px;
+                height: 186px;
+                width: 186px;
+                color: $orange-3;
+                &.active{
+                    border: solid 6px $orange-3;
+                    background-color: $orange-3;
+                    i{
+                        color: white;
+                    }
+                }
+                i{
+                    vertical-align: middle;
+                }
+            }
+        }
+    }
+    .contact-title{
+        position: relative;
+        .social-media{
+            position: absolute;
+            bottom: -120px;
+            i{
+                color: $orange-3;
+                margin-bottom: 8px;
+            }
+        }
+        &:after{
+            content:'';
+            background: url("http://localhost/toppeq-cms/wp-content/uploads/2020/01/logo_overlay.png") no-repeat;
+            background-position: center;
+            background-size: 280px;
+            opacity: 0.08;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            position: absolute;
+            z-index: -1;
+        }
+    }
+    .contact-form{
+        .panel-body{
+            box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
+            background-color: white;
+            padding: 1.5rem;
+            input[type="text"] , textarea{
+                border-bottom: solid 1px $gray-500 !important;
+                box-shadow: none;
+                border: 0;
+                border-radius: 0px;
+            }
+            .frm_button_submit{
+                background-color: $orange-3;
+                padding: 0.8rem 4rem 0.8rem 0.5rem;
+                color: white;
+                box-shadow: none;
+                border: 0;
+                border-radius: 0;
+                position: relative;
+                &:after{
+                    content: "\f105";
+                    color: white;
+                    font-family: 'FontAwesome';
+                    position: absolute;
+                    right: 0.5rem;
+                    font-size: 25px;
+                    top: 7px;
+                }
+                &:hover{
+                    background-color: $orange-3;
+                    color: white;
+                }
+            }
+        }
+        .rectangle{
+            background: #f16624;
+            width: 150px;
+            height: 130px;
+            position: absolute;
+            opacity: 0.07;
+            top: -25px;
+            left: -25px;
+            z-index: -1
+        }
+    }
+}
