--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -653,6 +653,8 @@ hr.line-separator{
 .contact-us{
     .nav-tabs{
         border-bottom: 0;
+        justify-content: center;
+        flex-wrap: nowrap;
         li{
             margin: 1rem;
             a{
@@ -667,22 +669,56 @@ hr.line-separator{
                     background-color: $orange-3;
                     i{
                         color: white;
+                        font-size: 5em;
+                        @media (max-width: 991px){
+                            font-size: 3em;
+                        }
+                        @media (max-width: 425px){
+                            font-size: 2.5em;
+                        }
                     }
                 }
                 i{
                     vertical-align: middle;
+                    font-size: 5em;
+                    @media (max-width: 991px){
+                        font-size: 3em;
+                    }
+                    @media (max-width: 425px){
+                        font-size: 2.5em;
+                    }
+                }
+                @media (max-width: 991px){
+                    padding: 28px 20px;
+                }
+                @media (max-width: 425px){
+                    padding: 20px 16px;
                 }
             }
         }
     }
     .contact-title{
         position: relative;
+        h1{
+            @media (max-width: 425px){
+                font-size: 35px !important;
+            }
+        }
+        .email-id{
+            font-size: 16px !important;
+        }
         .social-media{
             position: absolute;
             bottom: -120px;
             i{
                 color: $orange-3;
                 margin-bottom: 8px;
+            }
+            @media (max-width: 991px){
+                bottom: -100px;
+            }
+            @media (max-width: 767px){
+                display: none;
             }
         }
         &:after{
@@ -730,6 +766,13 @@ hr.line-separator{
                 &:hover{
                     background-color: $orange-3;
                     color: white;
+                    &:after{
+                        right: 0.5rem;
+                    }
+                }
+                @media (max-width: 767px){
+                    width: 100%;
+                    text-align: left;
                 }
             }
         }
