--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -705,7 +705,9 @@ hr.line-separator{
             }
         }
         .email-id{
-            font-size: 16px !important;
+            @media (max-width: 425px){
+                font-size: 16px !important;
+            }
         }
         .social-media{
             position: absolute;
